fix visibility toggle

--- a/src/css/annotationui.css
+++ b/src/css/annotationui.css
@@ -58,7 +58,7 @@
     color:black;
     overflow:hidden;
     display:grid;
-    grid-template-rows: auto auto minmax(4em, 1fr) auto;
+    grid-template-rows: auto minmax(4em, 1fr) auto;
     border:thin gray solid;
     padding:2px;
     box-sizing:border-box;
@@ -260,12 +260,12 @@
     overflow: hidden;
     padding:0;
     border:none;
-    text-align:left;
 }
 .annotation-ui-drawing-toolbar{
     background-color:lightgray;
     display: inline-block;
     max-width:100%;
+    text-align:left;
 }
 .annotation-ui-drawing-toolbar button[disabled]{
     pointer-events:none;
